--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ excludes=
 file.reference.commons-io-2.4.jar=librerias/commons-io-2.4.jar
 file.reference.highfaces-1.2.jar=../../../../michael/Downloads/highfaces-1.2.jar
 file.reference.highfaces-1.2.jar-1=../../../../soluciones/Downloads/highfaces-1.2.jar
+file.reference.poi-3.16.jar=librerias\\poi-3.16.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -50,7 +51,8 @@ javac.classpath=\
     ${libs.primefaces.classpath}:\
     ${file.reference.highfaces-1.2.jar}:\
     ${file.reference.commons-io-2.4.jar}:\
-    ${file.reference.highfaces-1.2.jar-1}
+    ${file.reference.highfaces-1.2.jar-1}:\
+    ${file.reference.poi-3.16.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
