--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,10 +30,77 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.ant-1.7.1.jar=librerias\\ant-1.7.1.jar
+file.reference.antlr-2.7.5.jar=librerias\\antlr-2.7.5.jar
+file.reference.barbecue-1.5-beta1.jar=librerias\\barbecue-1.5-beta1.jar
+file.reference.barcode4j-2.1.jar=librerias\\barcode4j-2.1.jar
+file.reference.batik-anim.jar=librerias\\batik-anim.jar
+file.reference.batik-awt-util.jar=librerias\\batik-awt-util.jar
+file.reference.batik-bridge.jar=librerias\\batik-bridge.jar
+file.reference.batik-css.jar=librerias\\batik-css.jar
+file.reference.batik-dom.jar=librerias\\batik-dom.jar
+file.reference.batik-ext.jar=librerias\\batik-ext.jar
+file.reference.batik-gvt.jar=librerias\\batik-gvt.jar
+file.reference.batik-parser.jar=librerias\\batik-parser.jar
+file.reference.batik-script.jar=librerias\\batik-script.jar
+file.reference.batik-svg-dom.jar=librerias\\batik-svg-dom.jar
+file.reference.batik-svggen.jar=librerias\\batik-svggen.jar
+file.reference.batik-util.jar=librerias\\batik-util.jar
+file.reference.batik-xml.jar=librerias\\batik-xml.jar
+file.reference.bcel-5.2.jar=librerias\\bcel-5.2.jar
+file.reference.bsh-2.0b4.jar=librerias\\bsh-2.0b4.jar
+file.reference.castor-core-1.3.3.jar=librerias\\castor-core-1.3.3.jar
+file.reference.castor-xml-1.3.3.jar=librerias\\castor-xml-1.3.3.jar
+file.reference.commons-beanutils-1.9.0.jar=librerias\\commons-beanutils-1.9.0.jar
+file.reference.commons-codec-1.5.jar=librerias\\commons-codec-1.5.jar
+file.reference.commons-collections-3.2.1.jar=librerias\\commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=librerias\\commons-digester-2.1.jar
 file.reference.commons-io-2.4.jar=librerias/commons-io-2.4.jar
+file.reference.commons-javaflow-20060411.jar=librerias\\commons-javaflow-20060411.jar
+file.reference.commons-logging-1.1.1.jar=librerias\\commons-logging-1.1.1.jar
+file.reference.dom4j-1.6.1.jar=librerias\\dom4j-1.6.1.jar
+file.reference.ecj-4.3.1.jar=librerias\\ecj-4.3.1.jar
+file.reference.groovy-all-2.0.1.jar=librerias\\groovy-all-2.0.1.jar
 file.reference.highfaces-1.2.jar=../../../../michael/Downloads/highfaces-1.2.jar
 file.reference.highfaces-1.2.jar-1=../../../../soluciones/Downloads/highfaces-1.2.jar
+file.reference.hsqldb-1.8.0-10.jar=librerias\\hsqldb-1.8.0-10.jar
+file.reference.httpclient-4.3.4.jar=librerias\\httpclient-4.3.4.jar
+file.reference.httpcore-4.3.2.jar=librerias\\httpcore-4.3.2.jar
+file.reference.itext-pdfa-5.5.0.jar=librerias\\itext-pdfa-5.5.0.jar
+file.reference.itextpdf-5.5.0.jar=librerias\\itextpdf-5.5.0.jar
+file.reference.jackson-annotations-2.1.4.jar=librerias\\jackson-annotations-2.1.4.jar
+file.reference.jackson-core-2.1.4.jar=librerias\\jackson-core-2.1.4.jar
+file.reference.jackson-databind-2.1.4.jar=librerias\\jackson-databind-2.1.4.jar
+file.reference.jasperreports-6.0.3.jar=librerias\\jasperreports-6.0.3.jar
+file.reference.jasperreports-fonts-6.0.3.jar=librerias\\jasperreports-fonts-6.0.3.jar
+file.reference.jasperreports-javaflow-6.0.3.jar=librerias\\jasperreports-javaflow-6.0.3.jar
+file.reference.jaxen-1.1.1.jar=librerias\\jaxen-1.1.1.jar
+file.reference.jcommon-1.0.15.jar=librerias\\jcommon-1.0.15.jar
+file.reference.jfreechart-1.0.12.jar=librerias\\jfreechart-1.0.12.jar
+file.reference.jxl-2.6.10.jar=librerias\\jxl-2.6.10.jar
+file.reference.log4j-1.2.15.jar=librerias\\log4j-1.2.15.jar
+file.reference.lucene-analyzers-common-4.5.1.jar=librerias\\lucene-analyzers-common-4.5.1.jar
+file.reference.lucene-core-4.5.1.jar=librerias\\lucene-core-4.5.1.jar
+file.reference.lucene-queryparser-4.5.1.jar=librerias\\lucene-queryparser-4.5.1.jar
+file.reference.mondrian-3.1.1.12687.jar=librerias\\mondrian-3.1.1.12687.jar
+file.reference.olap4j-0.9.7.309-JS-3.jar=librerias\\olap4j-0.9.7.309-JS-3.jar
+file.reference.png-encoder-1.5.jar=librerias\\png-encoder-1.5.jar
+file.reference.poi-3.10.1.jar=librerias\\poi-3.10.1.jar
 file.reference.poi-3.16.jar=librerias\\poi-3.16.jar
+file.reference.poi-ooxml-3.10.1.jar=librerias\\poi-ooxml-3.10.1.jar
+file.reference.poi-ooxml-schemas-3.10.1.jar=librerias\\poi-ooxml-schemas-3.10.1.jar
+file.reference.rhino-1.7R3.jar=librerias\\rhino-1.7R3.jar
+file.reference.saaj-api-1.3.jar=librerias\\saaj-api-1.3.jar
+file.reference.serializer.jar=librerias\\serializer.jar
+file.reference.servlet-api-2.4.jar=librerias\\servlet-api-2.4.jar
+file.reference.spring-beans-2.5.5.jar=librerias\\spring-beans-2.5.5.jar
+file.reference.spring-core-2.5.5.jar=librerias\\spring-core-2.5.5.jar
+file.reference.velocity-1.7-dep.jar=librerias\\velocity-1.7-dep.jar
+file.reference.xalan-2.7.1.jar=librerias\\xalan-2.7.1.jar
+file.reference.xercesImpl-2.10.0.jar=librerias\\xercesImpl-2.10.0.jar
+file.reference.xml-apis-ext.jar=librerias\\xml-apis-ext.jar
+file.reference.xml-apis.jar=librerias\\xml-apis.jar
+file.reference.xmlbeans-2.5.0.jar=librerias\\xmlbeans-2.5.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -52,7 +119,74 @@ javac.classpath=\
     ${file.reference.highfaces-1.2.jar}:\
     ${file.reference.commons-io-2.4.jar}:\
     ${file.reference.highfaces-1.2.jar-1}:\
-    ${file.reference.poi-3.16.jar}
+    ${file.reference.poi-3.16.jar}:\
+    ${file.reference.ant-1.7.1.jar}:\
+    ${file.reference.antlr-2.7.5.jar}:\
+    ${file.reference.barbecue-1.5-beta1.jar}:\
+    ${file.reference.barcode4j-2.1.jar}:\
+    ${file.reference.batik-anim.jar}:\
+    ${file.reference.batik-awt-util.jar}:\
+    ${file.reference.batik-bridge.jar}:\
+    ${file.reference.batik-css.jar}:\
+    ${file.reference.batik-dom.jar}:\
+    ${file.reference.batik-ext.jar}:\
+    ${file.reference.batik-gvt.jar}:\
+    ${file.reference.batik-parser.jar}:\
+    ${file.reference.batik-script.jar}:\
+    ${file.reference.batik-svg-dom.jar}:\
+    ${file.reference.batik-svggen.jar}:\
+    ${file.reference.batik-util.jar}:\
+    ${file.reference.batik-xml.jar}:\
+    ${file.reference.bcel-5.2.jar}:\
+    ${file.reference.bsh-2.0b4.jar}:\
+    ${file.reference.castor-core-1.3.3.jar}:\
+    ${file.reference.castor-xml-1.3.3.jar}:\
+    ${file.reference.commons-beanutils-1.9.0.jar}:\
+    ${file.reference.commons-codec-1.5.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-javaflow-20060411.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.dom4j-1.6.1.jar}:\
+    ${file.reference.ecj-4.3.1.jar}:\
+    ${file.reference.groovy-all-2.0.1.jar}:\
+    ${file.reference.hsqldb-1.8.0-10.jar}:\
+    ${file.reference.httpclient-4.3.4.jar}:\
+    ${file.reference.httpcore-4.3.2.jar}:\
+    ${file.reference.itext-pdfa-5.5.0.jar}:\
+    ${file.reference.itextpdf-5.5.0.jar}:\
+    ${file.reference.jackson-annotations-2.1.4.jar}:\
+    ${file.reference.jackson-core-2.1.4.jar}:\
+    ${file.reference.jackson-databind-2.1.4.jar}:\
+    ${file.reference.jasperreports-6.0.3.jar}:\
+    ${file.reference.jasperreports-fonts-6.0.3.jar}:\
+    ${file.reference.jasperreports-javaflow-6.0.3.jar}:\
+    ${file.reference.jaxen-1.1.1.jar}:\
+    ${file.reference.jcommon-1.0.15.jar}:\
+    ${file.reference.jfreechart-1.0.12.jar}:\
+    ${file.reference.jxl-2.6.10.jar}:\
+    ${file.reference.log4j-1.2.15.jar}:\
+    ${file.reference.lucene-analyzers-common-4.5.1.jar}:\
+    ${file.reference.lucene-core-4.5.1.jar}:\
+    ${file.reference.lucene-queryparser-4.5.1.jar}:\
+    ${file.reference.mondrian-3.1.1.12687.jar}:\
+    ${file.reference.olap4j-0.9.7.309-JS-3.jar}:\
+    ${file.reference.png-encoder-1.5.jar}:\
+    ${file.reference.poi-3.10.1.jar}:\
+    ${file.reference.poi-ooxml-3.10.1.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.10.1.jar}:\
+    ${file.reference.rhino-1.7R3.jar}:\
+    ${file.reference.saaj-api-1.3.jar}:\
+    ${file.reference.serializer.jar}:\
+    ${file.reference.servlet-api-2.4.jar}:\
+    ${file.reference.spring-beans-2.5.5.jar}:\
+    ${file.reference.spring-core-2.5.5.jar}:\
+    ${file.reference.velocity-1.7-dep.jar}:\
+    ${file.reference.xalan-2.7.1.jar}:\
+    ${file.reference.xercesImpl-2.10.0.jar}:\
+    ${file.reference.xml-apis-ext.jar}:\
+    ${file.reference.xml-apis.jar}:\
+    ${file.reference.xmlbeans-2.5.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
