--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -46,7 +46,7 @@ file.reference.batik-script.jar=librerias\\batik-script.jar
 file.reference.batik-svg-dom.jar=librerias\\batik-svg-dom.jar
 file.reference.batik-svggen.jar=librerias\\batik-svggen.jar
 file.reference.batik-util.jar=librerias\\batik-util.jar
-file.reference.batik-xml.jar=librerias\\batik-xml.jar
+file.reference.batik-xml.jar=librerias/batik-xml.jar
 file.reference.bcel-5.2.jar=librerias\\bcel-5.2.jar
 file.reference.bsh-2.0b4.jar=librerias\\bsh-2.0b4.jar
 file.reference.castor-core-1.3.3.jar=librerias\\castor-core-1.3.3.jar
@@ -77,6 +77,7 @@ file.reference.jasperreports-javaflow-6.0.3.jar=librerias\\jasperreports-javaflo
 file.reference.jaxen-1.1.1.jar=librerias\\jaxen-1.1.1.jar
 file.reference.jcommon-1.0.15.jar=librerias\\jcommon-1.0.15.jar
 file.reference.jfreechart-1.0.12.jar=librerias\\jfreechart-1.0.12.jar
+file.reference.json-20170516.jar=librerias\\json-20170516.jar
 file.reference.jxl-2.6.10.jar=librerias\\jxl-2.6.10.jar
 file.reference.log4j-1.2.15.jar=librerias\\log4j-1.2.15.jar
 file.reference.lucene-analyzers-common-4.5.1.jar=librerias\\lucene-analyzers-common-4.5.1.jar
@@ -97,7 +98,6 @@ file.reference.spring-beans-2.5.5.jar=librerias\\spring-beans-2.5.5.jar
 file.reference.spring-core-2.5.5.jar=librerias\\spring-core-2.5.5.jar
 file.reference.velocity-1.7-dep.jar=librerias\\velocity-1.7-dep.jar
 file.reference.xalan-2.7.1.jar=librerias\\xalan-2.7.1.jar
-file.reference.xercesImpl-2.10.0.jar=librerias\\xercesImpl-2.10.0.jar
 file.reference.xml-apis-ext.jar=librerias\\xml-apis-ext.jar
 file.reference.xml-apis.jar=librerias\\xml-apis.jar
 file.reference.xmlbeans-2.5.0.jar=librerias\\xmlbeans-2.5.0.jar
@@ -106,7 +106,7 @@ j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=1.7-web
-j2ee.platform.classpath=${j2ee.server.home}/modules/endorsed/javax.annotation-api.jar:${j2ee.server.home}/modules/endorsed/jaxb-api.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/bean-validator.jar:${j2ee.server.home}/modules/cdi-api.jar:${j2ee.server.home}/modules/javax.batch-api.jar:${j2ee.server.home}/modules/javax.ejb-api.jar:${j2ee.server.home}/modules/javax.el.jar:${j2ee.server.home}/modules/javax.enterprise.concurrent-api.jar:${j2ee.server.home}/modules/javax.enterprise.concurrent.jar:${j2ee.server.home}/modules/javax.enterprise.deploy-api.jar:${j2ee.server.home}/modules/javax.faces.jar:${j2ee.server.home}/modules/javax.inject.jar:${j2ee.server.home}/modules/javax.interceptor-api.jar:${j2ee.server.home}/modules/javax.jms-api.jar:${j2ee.server.home}/modules/javax.json.jar:${j2ee.server.home}/modules/javax.mail.jar:${j2ee.server.home}/modules/javax.management.j2ee-api.jar:${j2ee.server.home}/modules/javax.persistence.jar:${j2ee.server.home}/modules/javax.resource-api.jar:${j2ee.server.home}/modules/javax.security.auth.message-api.jar:${j2ee.server.home}/modules/javax.security.jacc-api.jar:${j2ee.server.home}/modules/javax.servlet-api.jar:${j2ee.server.home}/modules/javax.servlet.jsp-api.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jstl-api.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jstl.jar:${j2ee.server.home}/modules/javax.transaction-api.jar:${j2ee.server.home}/modules/javax.websocket-api.jar:${j2ee.server.home}/modules/javax.ws.rs-api.jar:${j2ee.server.home}/modules/javax.xml.registry-api.jar:${j2ee.server.home}/modules/javax.xml.rpc-api.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.middleware}/mq/lib/jaxm-api.jar
+j2ee.platform.classpath=${j2ee.server.home}/modules/endorsed/javax.annotation-api.jar:${j2ee.server.home}/modules/endorsed/jaxb-api.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/bean-validator.jar:${j2ee.server.home}/modules/cdi-api.jar:${j2ee.server.home}/modules/javax.batch-api.jar:${j2ee.server.home}/modules/javax.ejb-api.jar:${j2ee.server.home}/modules/javax.el.jar:${j2ee.server.home}/modules/javax.enterprise.concurrent-api.jar:${j2ee.server.home}/modules/javax.enterprise.concurrent.jar:${j2ee.server.home}/modules/javax.enterprise.deploy-api.jar:${j2ee.server.home}/modules/javax.faces.jar:${j2ee.server.home}/modules/javax.inject.jar:${j2ee.server.home}/modules/javax.interceptor-api.jar:${j2ee.server.home}/modules/javax.jms-api.jar:${j2ee.server.home}/modules/javax.json.jar:${j2ee.server.home}/modules/javax.mail.jar:${j2ee.server.home}/modules/javax.management.j2ee-api.jar:${j2ee.server.home}/modules/javax.persistence.jar:${j2ee.server.home}/modules/javax.resource-api.jar:${j2ee.server.home}/modules/javax.security.auth.message-api.jar:${j2ee.server.home}/modules/javax.security.jacc-api.jar:${j2ee.server.home}/modules/javax.servlet-api.jar:${j2ee.server.home}/modules/javax.servlet.jsp-api.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jstl-api.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jstl.jar:${j2ee.server.home}/modules/javax.transaction-api.jar:${j2ee.server.home}/modules/javax.websocket-api.jar:${j2ee.server.home}/modules/javax.ws.rs-api.jar:${j2ee.server.home}/modules/javax.xml.registry-api.jar:${j2ee.server.home}/modules/javax.xml.rpc-api.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/weld-osgi-bundle.jar:${j2ee.server.middleware}/mq/lib/jaxm-api.jar
 j2ee.platform.embeddableejb.classpath=${j2ee.server.home}/lib/embedded/glassfish-embedded-static-shell.jar
 j2ee.platform.wscompile.classpath=${j2ee.server.home}/modules/webservices-osgi.jar
 j2ee.platform.wsgen.classpath=${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/endorsed/jaxb-api.jar
@@ -183,10 +183,11 @@ javac.classpath=\
     ${file.reference.spring-core-2.5.5.jar}:\
     ${file.reference.velocity-1.7-dep.jar}:\
     ${file.reference.xalan-2.7.1.jar}:\
-    ${file.reference.xercesImpl-2.10.0.jar}:\
+    ${file.reference.batik-xml.jar}:\
     ${file.reference.xml-apis-ext.jar}:\
     ${file.reference.xml-apis.jar}:\
-    ${file.reference.xmlbeans-2.5.0.jar}
+    ${file.reference.xmlbeans-2.5.0.jar}:\
+    ${file.reference.json-20170516.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
